# fastapi_playground

./: .env  .gitignore  APP_STRUCTURE.md  README.md  alembic.ini  pyproject.toml  template_simple.db
alembic/: env.py  script.py.mako
alembic/versions/: 2026-01-20_rev0_3e8dc1d54bf6_initinal.py  2026-02-01_add_organisatie_and_persoon_organisatie_b2c3d4e5f6a7.py  2026-02-22_rev0_cef446336358_add_zichtbaarheid_to_persoon.py
app/: __init__.py  enums.py  main.py
app/api/: __init__.py  dependencies.py  responses.py  router.py
app/api/endpoints/: __init__.py  auth.py  fastapi_oeutils.py  health.py  organisatie.py  persoon.py
app/core/: __init__.py  config.py  health.py  logging.py  security.py
app/data/: __init__.py
app/data/db/: __init__.py  base.py  session.py
app/data/db/dao/: base.py  (+4 more)
app/exceptions/: __init__.py  auth.py  common.py  handlers.py  organisatie.py  persoon.py
app/infrastructure/: clients.py
app/infrastructure/cache/: redis.py
app/infrastructure/database/: postgres.py  sqlalchemy.py
app/presenters/: __init__.py  persoon.py
app/schemas/: __init__.py  common.py  organisatie.py  persoon.py
app/security/: __init__.py  auth.py  base.py  organisatie.py  persoon.py
app/services/: __init__.py  base.py  organisatie.py  persoon.py  persoon_service.py
app/templates/: index.html
app/web/: router.py
simulation/: requests.http
simulation/requests_fixtures/: organisatie_create.json  persoon_create.json  persoon_create_400.json  persoon_create_400_2.json  persoon_create_no_organisatie.json  persoon_create_privaat.json
tests/: __init__.py
(+5 files in other folders)
