[project]
name = "fast-api-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.126.0",
    "uvicorn>=0.38.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",
    "elasticsearch>=9.2.1",
    "pydantic-settings>=2.12.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.0",
    "psycopg2>=2.9.11",
]
[tool.ruff.settings]
line-length = 90
#select = ["E", "F", "W", "C90", "B", "I", "T"]
#ignore = ["E501", "W503"]